--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,26 @@ h3{
     border-radius: 5px;
     margin-top: 20px;
 }
+
+.game-over{
+    background-color: var(--bg-color);
+    color: var(--primary-color);
+}
+
+.btn-game-over{
+    font-family: var(--font-family);
+    font-size: 1.2em;
+    font-weight: 700;
+    color: var(--primary-color);
+    padding: 8px 15px;
+    border: 2px solid var(--primary-color);
+    background: var(--bg-color);
+    border-radius: 5px;
+    margin-top: 60px;
+}
+
+.btn-game-over:hover{
+    color: var(--bg-color);
+    background-color: var(--second-color);
+    cursor: pointer;
+}
